# CS236

./: .gitignore  AddAutomaton.cpp  AddAutomaton.h  Automaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  EndOFAutomaton.cpp  EndOFAutomaton.h  ExactMatcher.cpp  ExactMatcher.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  Left_ParenAutomaton.cpp  Left_ParenAutomaton.h  Lexer.cpp  Lexer.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Predicate.cpp  Predicate.h  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  Right_ParenAutomaton.cpp  Right_ParenAutomaton.h  (+13 more)
